--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@vueuse/motion": "^3.0.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
+    "vue": "^3.2.13",
+    "vue3-lottie": "^3.3.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^5.0.8",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   },
   "eslintConfig": {
     "root": true,
